fixed bug in styling

--- a/demos/index.html
+++ b/demos/index.html
@@ -7,7 +7,7 @@
     <title>Turtle</title>
 </head>
 <body>  
-    <script src="turtle.js"></script>
+    <script src="../turtle.js"></script>
     <script src="index.js"></script> 
 </body>
 </html>
